# libvmod-awsrest

./: README.rst  configure.ac
src/: Makefile.am  vmod_awsrest.c  vmod_awsrest.vcc  vmod_awsrestv2.c  vmod_awsrestv2.vcc
